# auto-style-capture

./: .gitignore  CLAUDE.md  README.md  config.example.yaml  program.md  pyproject.toml
examples/hemingway_corpus/: old_man.txt
scripts/: fetch_pg_essays.py  scrape_danluu.py  scrape_gwern.py  scrape_julia_evans.py  scrape_morgan_housel.py  scrape_patio11.py  scrape_scott_alexander.py  scrape_seth_godin.py  scrape_wbw.py  scrape_willison.py
src/auto_style_capture/: __init__.py  cli.py  config.py  pipeline.py
src/auto_style_capture/discriminator/: ensemble.py  llm_judge.py  ml_classifier.py
src/auto_style_capture/features/: extractor.py  lexical.py  models.py  ngrams.py  punctuation.py  readability.py  syntactic.py
src/auto_style_capture/generator/: generator.py
src/auto_style_capture/llm/: provider.py
src/auto_style_capture/style_skill/: skill.py  templates.py
src/auto_style_capture/updater/: updater.py
src/auto_style_capture/utils/: metrics.py
tests/: conftest.py
tests/test_corpus/: test_loader.py
tests/test_features/: test_extractor.py
tests/test_style_skill/: test_skill.py
